# plasmaPico

./: .gitignore  CMakeLists.txt  byteTest.py  csvFile.csv  main copy.c  main.c  pinsToggle.pio  returnBlock.csv  returnData.csv  sendWav.py
blink1fix/: main.c
blinkno1/: CMakeLists.txt
old/: CMakeCache.txt  CMakeLists.txt  blink.c  csv_reader.py  hello.c  hello_t.pio  hello_t.pio.h  spa_test.c  spa_toggle.pio  spa_toggle.pio.h
old/blink1fix/: CMakeLists.txt  blink1.pio  blink2.pio
old/blinkno1/: main.c
serialTest/: CMakeLists.txt  main.c  sendWav.py  wavOutput.py  wavTest.py
